--- a/style.css
+++ b/style.css
@@ -1,79 +1,144 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&family=Tangerine&display=swap');
-*{
-    box-sizing: border-box;
-    font-family: 'Tangerine', cursive;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&family=Tangerine&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Tangerine", cursive;
 }
 
-body{
-    background-color: black;
-    color: white;
+body {
+  background-color: black;
+  color: white;
 }
 
-
-header{
-    text-align: center;
-    font-size: 86px;
-    margin-bottom: 50px;
-    border-bottom: 1px solid white;
+header {
+  text-align: center;
+  font-size: 86px;
+  margin-bottom: 50px;
+  border-bottom: 1px solid white;
 }
 
-label{
-   
-    font-size: 48px;
- 
+label {
+  font-size: 48px;
 }
 
-.form{
-    text-align:end;
+.form {
+  text-align: end;
 }
 
-input{
-    margin: 20px;
-    padding: 10px;
-    width: 30%;
-    font-size: 32px;
-    font-weight: bold;
-    outline: none;
+input {
+  margin: 20px;
+  padding: 10px;
+  width: 30%;
+  font-size: 32px;
+  font-weight: bold;
+  outline: none;
 }
 
-input:focus{
-    outline: none;
+input:focus {
+  outline: none;
 }
 
-input:focus::-webkit-input-placeholder { color:transparent; }
-
-.img{
-    
-    display: flex;
-   
+input:focus::-webkit-input-placeholder {
+  color: transparent;
 }
 
-img{
-    height: 250px ;
-    width: 200px;
-    
+.img {
+  display: flex;
 }
 
-
-.output{
-    font-size: 32px;
-    margin-top: 50px ;
-    border: 1px solid white;
-    width: 35%;
-    height: 10vh;
+img {
+  height: 250px;
+  width: 200px;
 }
 
-.btn{
-    margin-right: 50px;
-    font-size: 2rem;
-    margin-top: 30px;
-    cursor: pointer;
-    padding: 10px;
-
+.output {
+  font-size: 32px;
+  margin-top: 50px;
+  border: 1px solid white;
+  width: 35%;
+  height: 10vh;
 }
 
-.error{
-    color: red;
-    font-size: 32px;
-    margin-right: 30px;
+.btn {
+  margin-right: 50px;
+  font-size: 2rem;
+  margin-top: 30px;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.error {
+  color: red;
+  font-size: 32px;
+  margin-right: 30px;
+}
+
+.msg {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: var(--dark-yellow);
+  font-size: 2em;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  top: 30%;
+  left: 35%;
+  width: auto;
+  padding: 1.3rem;
+  height: auto;
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ddd;
+  color: black;
+  font-size: larger;
+  border-radius: 15px;
+  z-index: 2;
+}
+
+.modal p {
+  font-size: large;
+  color: #777;
+}
+
+.closeBtn {
+  cursor: pointer;
+  display: block;
+  margin-left: auto;
+  background-color: white;
+  color: grey;
+  border: none;
+  font-size: 1em;
+  width: auto;
+}
+
+.closeBtn:hover {
+  background-color: black;
+  color: white;
+}
+
+.closeBtn:active {
+  color: black;
+  background-color: white;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+}
+
+.hidden {
+  display: none;
 }
